# MiniRetroXMB-v1.0

./: CMakeLists.txt  LICENSE  MIT License.txt  README.md
src/: bgpicker.c  bgpicker.h  colorpicker.c  colorpicker.h  export.c  export.h  main.c  preview.c  preview.h  themebrowser.c  themebrowser.h
